Fix dir-config for phpcpd

--- a/assets/drupal8/grumphp/grumphp.yml
+++ b/assets/drupal8/grumphp/grumphp.yml
@@ -71,7 +71,8 @@ parameters:
         - twig
         - php
     phpcpd:
-      directory: htdocs
+      directory:
+        - htdocs
       min_lines: 6
       min_tokens: 70
       exclude:
