--- a/assets/drupal8/grumphp/phpstan.neon
+++ b/assets/drupal8/grumphp/phpstan.neon
@@ -1,5 +1,6 @@
 includes:
 	- vendor/mglaman/phpstan-drupal/extension.neon
 
-drupal:
-    drupal_root: /var/www/htdocs/app
+parameters:
+    drupal:
+        drupal_root: htdocs/app
