--- a/assets/drupal8/grumphp/grumphp.yml
+++ b/assets/drupal8/grumphp/grumphp.yml
@@ -1,2 +1,2 @@
 imports:
-  - { resource: vendor/lammensj/resilient-robo/assets/drupal8/grumphp/core.grumphp.yml }
+  - { resource: ./vendor/lammensj/resilient-robo/assets/drupal8/grumphp/core.grumphp.yml }
